# koii

./: .gitignore  .prettierrc  Cargo.toml  Containerfile  README.md  dockerfile  example.env
client/: index.html  package.json  wrangler.jsonc
client/src/: App.tsx  context.ts  index.css  main.tsx
client/src/Layout/: index.tsx
client/src/Layout/components/: NavBar.tsx
client/src/base/: DelayedOutlet.tsx  Pipeline.tsx
client/src/hooks/: effectOnce.ts  routeNormalizer.ts  router.tsx
client/src/schemas/: Link.tsx
client/src/utils/: lenisInstance.ts
dev/: database.sh
server/: Cargo.toml
server/src/: consts.rs  database.rs  main.rs  services.rs  utils.rs  worker.rs
server/src/base/: mod.rs  response.rs  session.rs
server/src/cache/: mod.rs  refresh.rs  token.rs  verify.rs
server/src/database/: mod.rs  refresh.rs  users.rs
server/src/database/user/: document.rs  mod.rs  user.rs
server/src/middlewares/: auth.rs  mod.rs  time.rs
server/src/routes/: user.rs
server/src/routes/user/: create.rs  delete.rs  login.rs  logout.rs  mod.rs  refresh.rs  verify.rs
server/src/routes/user/tfa/: mod.rs
server/src/routes/user/tfa/passkey/: mod.rs
server/src/routes/user/tfa/totp/: mod.rs
server/src/services/: hash_pass.rs  verify_email.rs  verify_pass.rs
server/src/store/: mod.rs  refresh.rs  users.rs
server/src/utils/: checks.rs  cookie_query.rs  cookies.rs  jwt.rs  middlewares.rs  mod.rs  session.rs  turnstile.rs
server/src/worker/: verify_email.rs
server/src/workers/: hash_pass.rs  mod.rs  verify_email.rs  verify_pass.rs
src/: consts.rs  env.rs  lib.rs  main.rs
src/base/: cookies.rs  mod.rs
src/database/: account.rs  auth.rs  mod.rs  partial_login.rs  sudo.rs  token.rs  totp.rs
src/database/account/: document.rs  mod.rs  sudo.rs  token.rs
src/database/totp/: code.rs  mod.rs  store.rs  totp.rs
src/database/user/: document.rs  mod.rs  token.rs
src/middlewares/: auth.rs  mod.rs  time.rs  track.rs
src/routes/account/: create.rs  delete.rs  login.rs  logout.rs  mod.rs  refresh.rs  verify.rs
src/routes/account/passkey/: mod.rs
src/routes/account/sudo/: methods.rs  mod.rs
src/routes/account/totp/: authorize.rs  create.rs  mod.rs
src/routes/user/: create.rs  delete.rs  login.rs  logout.rs  mod.rs
src/routes/user/passkey/: mod.rs
src/routes/user/tfa/: mod.rs
src/routes/user/totp/: authorize.rs  create.rs  delete.rs
src/utils/: jwt.rs  mod.rs  timestamp.rs  totp.rs  turnstile.rs
src/workers/: hash_pass.rs  mod.rs  verify_email.rs  verify_pass.rs
tests/: suite.rs
