[package]
name = "koii"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-test = "20.0.0"
blake3 = { version = "1.8.5", features = ["digest"] }
cookie-rs = "0.5.0"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
kanal = "0.1.1"
mongodb = { version = "3.6.0", features = ["bson-3"] }
nanoid = "0.5.0"
redis = { version = "1.2.1", features = ["tokio-comp"] }
reqwest = { version = "0.13.3", features = ["form", "json"] }
resend-rs = { version = "0.25.1", features = ["blocking"] }
rustls = { version = "0.23.40", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
totp-rs = { version = "5.7.1", features = ["otpauth"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
validator = { version = "0.20.0", features = ["derive"] }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }
