[package]
name = "koii"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-test = "20.1.0"
cookie-rs = "0.5.0"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
kanal = "0.1.1"
mongodb = { version = "3.7.0", features = ["bson-3"] }
nanoid = "0.5.0"
redis = { version = "1.3.0", features = ["tokio-comp"] }
reqwest = { version = "0.13.4", features = ["form", "json"] }
resend-rs = { version = "0.25.1", features = ["blocking"] }
rustls = { version = "0.23.41", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tikv-jemallocator = "0.6.1"
tokio = { version = "1.52.3", features = ["full"] }
totp-rs = { version = "5.7.2", features = ["otpauth"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
validator = { version = "0.20.0", features = ["derive"] }
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }
