[package]
name = "koii-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["macros"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
blake3 = { version = "1.8.3", features = ["digest"] }
cookie-rs = "0.4.1"
dashmap = "6.1.0"
dotenv = "0.15.0"
kanal = "0.1.1"
mongodb = { version = "3.3.0", features = ["bson-3"] }
nanoid = "0.4.0"
redis = { version = "1.0.1", features = ["tokio-comp"] }
reqwest = { version = "0.13.1", features = ["form", "json"] }
resend-rs = { version = "0.19.0", features = ["blocking"] }
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
